--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "b34e527a",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,13 @@
     "from open_atmos_jupyter_utils import show_plot\n",
     "from pint import Quantity\n",
     "from scipy import constants\n",
-    "from scipy.constants import physical_constants"
+    "from scipy.constants import physical_constants\n",
+    "from typing import cast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "233cbb3b",
    "metadata": {},
    "outputs": [],
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "53d56601",
    "metadata": {},
    "outputs": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "9349297e",
    "metadata": {},
    "outputs": [
@@ -80,7 +81,7 @@
        "  <rdf:RDF xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n",
        "   <cc:Work>\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\n",
-       "    <dc:date>2025-10-29T16:32:11.251632</dc:date>\n",
+       "    <dc:date>2025-10-29T17:00:36.057424</dc:date>\n",
        "    <dc:format>image/svg+xml</dc:format>\n",
        "    <dc:creator>\n",
        "     <cc:Agent>\n",
@@ -115,12 +116,12 @@
        "    <g id=\"xtick_1\">\n",
        "     <g id=\"line2d_1\">\n",
        "      <defs>\n",
-       "       <path id=\"m7a7b3fddbc\" d=\"M 0 0 \n",
+       "       <path id=\"m658a7d3f22\" d=\"M 0 0 \n",
        "L 0 3.5 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a7b3fddbc\" x=\"51.361205\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m658a7d3f22\" x=\"51.361205\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -160,7 +161,7 @@
        "    <g id=\"xtick_2\">\n",
        "     <g id=\"line2d_2\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a7b3fddbc\" x=\"91.943023\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m658a7d3f22\" x=\"91.943023\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -211,7 +212,7 @@
        "    <g id=\"xtick_3\">\n",
        "     <g id=\"line2d_3\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a7b3fddbc\" x=\"132.524841\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m658a7d3f22\" x=\"132.524841\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -225,7 +226,7 @@
        "    <g id=\"xtick_4\">\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a7b3fddbc\" x=\"173.106659\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m658a7d3f22\" x=\"173.106659\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -265,7 +266,7 @@
        "    <g id=\"xtick_5\">\n",
        "     <g id=\"line2d_5\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a7b3fddbc\" x=\"213.688477\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m658a7d3f22\" x=\"213.688477\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -279,7 +280,7 @@
        "    <g id=\"xtick_6\">\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a7b3fddbc\" x=\"254.270295\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m658a7d3f22\" x=\"254.270295\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -327,7 +328,7 @@
        "    <g id=\"xtick_7\">\n",
        "     <g id=\"line2d_7\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a7b3fddbc\" x=\"294.852114\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m658a7d3f22\" x=\"294.852114\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -341,7 +342,7 @@
        "    <g id=\"xtick_8\">\n",
        "     <g id=\"line2d_8\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a7b3fddbc\" x=\"335.433932\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m658a7d3f22\" x=\"335.433932\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
@@ -376,7 +377,7 @@
        "    <g id=\"xtick_9\">\n",
        "     <g id=\"line2d_9\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a7b3fddbc\" x=\"376.01575\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m658a7d3f22\" x=\"376.01575\" y=\"273.312\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -616,12 +617,12 @@
        "    <g id=\"ytick_1\">\n",
        "     <g id=\"line2d_10\">\n",
        "      <defs>\n",
-       "       <path id=\"m5d3e4aebd5\" d=\"M 0 0 \n",
+       "       <path id=\"m93b0b29bc2\" d=\"M 0 0 \n",
        "L -3.5 0 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m5d3e4aebd5\" x=\"50.14375\" y=\"242.522701\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m93b0b29bc2\" x=\"50.14375\" y=\"242.522701\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
@@ -685,7 +686,7 @@
        "    <g id=\"ytick_2\">\n",
        "     <g id=\"line2d_11\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m5d3e4aebd5\" x=\"50.14375\" y=\"197.466562\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m93b0b29bc2\" x=\"50.14375\" y=\"197.466562\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
@@ -733,7 +734,7 @@
        "    <g id=\"ytick_3\">\n",
        "     <g id=\"line2d_12\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m5d3e4aebd5\" x=\"50.14375\" y=\"152.410422\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m93b0b29bc2\" x=\"50.14375\" y=\"152.410422\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_13\">\n",
@@ -749,7 +750,7 @@
        "    <g id=\"ytick_4\">\n",
        "     <g id=\"line2d_13\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m5d3e4aebd5\" x=\"50.14375\" y=\"107.354283\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m93b0b29bc2\" x=\"50.14375\" y=\"107.354283\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_14\">\n",
@@ -765,7 +766,7 @@
        "    <g id=\"ytick_5\">\n",
        "     <g id=\"line2d_14\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m5d3e4aebd5\" x=\"50.14375\" y=\"62.298143\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m93b0b29bc2\" x=\"50.14375\" y=\"62.298143\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_15\">\n",
@@ -781,7 +782,7 @@
        "    <g id=\"ytick_6\">\n",
        "     <g id=\"line2d_15\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m5d3e4aebd5\" x=\"50.14375\" y=\"17.242004\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m93b0b29bc2\" x=\"50.14375\" y=\"17.242004\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_16\">\n",
@@ -1079,7 +1080,7 @@
        "L 377.779817 252.531692 \n",
        "L 384.40542 256.884951 \n",
        "L 391.031023 261.216 \n",
-       "\" clip-path=\"url(#p434fabbf17)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pda175fa95a)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_3\">\n",
        "    <path d=\"M 50.14375 273.312 \n",
@@ -1104,7 +1105,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p434fabbf17\">\n",
+       "  <clipPath id=\"pda175fa95a\">\n",
        "   <rect x=\"50.14375\" y=\"7.2\" width=\"357.12\" height=\"266.112\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -1120,12 +1121,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6abd41c9ce343b3827677b5ae99781e",
+       "model_id": "c1b5e69269184c16b90dc20c8fe3edaf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=\"<a href='.\\\\tmpmlgqo25p.pdf' target='_blank'>.\\\\tmpmlgqo25p.pdf</a><br>\"), HTML(val…"
+       "HBox(children=(HTML(value=\"<a href='.\\\\tmpo3t8n10c.pdf' target='_blank'>.\\\\tmpo3t8n10c.pdf</a><br>\"), HTML(val…"
       ]
      },
      "metadata": {},
@@ -1134,11 +1135,11 @@
    ],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "T = Q_(np.linspace(280, 320), \"K\")\n",
+    "T = cast(Quantity, Q_(np.linspace(280, 320), \"K\"))\n",
     "\n",
     "ax.plot(T, rho(Q_(1000, \"hPa\"), R_str, T))\n",
     "ax.xaxis.set_units(si.celsius)\n",
-    "show_plot(fig=fig)"
+    "show_plot(fig=fig)  # type: ignore"
    ]
   }
  ],
