add scienceplots import

--- a/labs/lab3/main.ipynb
+++ b/labs/lab3/main.ipynb
@@ -36,6 +36,7 @@
     "\n",
     "import numpy as np\n",
     "import pint\n",
+    "import scienceplots\n",
     "from cycler import cycler\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.ticker import ScalarFormatter\n",
