--- a/labs/lab3/main.ipynb
+++ b/labs/lab3/main.ipynb
@@ -75,7 +75,7 @@
     "    \"goldenrod\",\n",
     "    \"turquoise\",\n",
     "]\n",
-    "plt.rcParams[\"text.usetex\"] = True\n",
+    "plt.rcParams[\"text.usetex\"] = False\n",
     "plt.rcParams[\"axes.prop_cycle\"] = cycler(color=nice_colors)"
    ]
   },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "94fd15eb",
    "metadata": {},
    "outputs": [
