add src/source.py link

--- a/labs/project/main.ipynb
+++ b/labs/project/main.ipynb
@@ -117,7 +117,7 @@
    "id": "ec9888f3",
    "metadata": {},
    "source": [
-    "Powyższe klasy znajdują się w pliku `src/source.py` dla oszczędności miejsca i limitu wielkości pliku na GitHub'ie (100MB)"
+    "Powyższe klasy znajdują się w pliku [`src/source.py`](https://github.com/MUPAGH2025/2dybich/blob/main/labs/project/src/source.py) dla oszczędności miejsca i limitu wielkości pliku na GitHub'ie (100MB)"
    ]
   },
   {
