add final changes and remove unnecessary plots

--- a/labs/project/main.ipynb
+++ b/labs/project/main.ipynb
@@ -27,7 +27,7 @@
    "id": "e944e520",
    "metadata": {},
    "source": [
-    "## Imports"
+    "## Importy"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "id": "3f777507",
    "metadata": {},
    "source": [
-    "# Classes"
+    "# Klasy"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "id": "f67dfcbf",
    "metadata": {},
    "source": [
-    "# Description\n",
+    "# Opis\n",
     "Stosujemy nazewnictwo parametrów z zajęć"
    ]
   },
@@ -173,10 +173,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "97db16d7",
+   "metadata": {},
+   "source": [
+    "## Jak czytać tabelę?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92a6a3cf",
+   "metadata": {},
+   "source": [
+    "|            |   zeta_max |   mag_max |     ux_min |\n",
+    "|:-----------|-----------:|----------:|-----------:|\n",
+    "| test_0     |  0.0153713 | 0.0459974 | -0.0459974 |\n",
+    "| one_step_0 |  0.0141852 | 0.0459974 | -0.0459974 |\n",
+    "| one_step_1 |  0.0187256 | 0.0421697 | -0.0421697 |\n",
+    "| one_step_2 |  0.0145508 | 0.0394076 | -0.0394076 |\n",
+    "\n",
+    "Comparison (one_step/test-1 [%]):\n",
+    "|            |   zeta_max |   mag_max |   ux_min |\n",
+    "|:-----------|-----------:|----------:|---------:|\n",
+    "| one_step_0 |     -7.716 |    -0     |   -0     |\n",
+    "| one_step_1 |     21.822 |    -8.322 |   -8.322 |\n",
+    "| one_step_2 |     -5.338 |   -14.327 |  -14.327 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a3a8d86",
+   "metadata": {},
+   "source": [
+    "Pierwsza tabela pokazuje surowe wartości - maksymalną wysokość fali testowej, itd., w trzech obszarach `one_step`. Druga tabela `Comparison (one_step/test-1 [%])` pokazuje wartości `ons_step`/`test` - 1 wyrażone w procentach. Widzimy, że `zeta_max` dla `one_step_0` ma wartość $-7.716$ - czyli jest $7.716\\%$ mniejsza niż ta sama wartość dla danych `test_0`.\n",
+    "\n",
+    "W tabelach porównania (`Comparison (<data1>/<data2> - 1 [%])`) wartości ujemne mówią, że `<data1>` jest o $x$ procent mniejsza niż `<data2>`, a dodatnie, że jest o $x$ procent większa niż `<data2>`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c5fe9faf",
    "metadata": {},
    "source": [
-    "# Simulations"
+    "# Symulacje"
    ]
   },
   {
@@ -184,7 +222,7 @@
    "id": "127e2133",
    "metadata": {},
    "source": [
-    "## Test Simulation"
+    "## Symulacja testowa"
    ]
   },
   {
@@ -192,7 +230,7 @@
    "id": "e794acb6",
    "metadata": {},
    "source": [
-    "### Parameters"
+    "### Parametry"
    ]
   },
   {
@@ -270,7 +308,7 @@
    "id": "e8d5b174",
    "metadata": {},
    "source": [
-    "### Initial"
+    "### Stan początkowy"
    ]
   },
   {
@@ -299,7 +337,7 @@
    "id": "514603e2",
    "metadata": {},
    "source": [
-    "### Simulation"
+    "### Symulacja"
    ]
   },
   {
@@ -317,7 +355,7 @@
    "id": "309ec286",
    "metadata": {},
    "source": [
-    "### Results"
+    "### Wyniki"
    ]
   },
   {
@@ -390,7 +428,7 @@
    "id": "32d5d134",
    "metadata": {},
    "source": [
-    "### Parameters"
+    "### Parametry"
    ]
   },
   {
@@ -422,7 +460,7 @@
    "id": "c8d329a6",
    "metadata": {},
    "source": [
-    "### Initial"
+    "### Stan początkowy"
    ]
   },
   {
@@ -443,7 +481,7 @@
    "id": "439b558a",
    "metadata": {},
    "source": [
-    "### Simulation"
+    "### Symulacja"
    ]
   },
   {
@@ -461,7 +499,7 @@
    "id": "13283812",
    "metadata": {},
    "source": [
-    "### Results"
+    "### Wyniki"
    ]
   },
   {
@@ -474,7 +512,7 @@
     " - obszar 2: tuż przed i tuż po barierze,\n",
     " - obszar 3: za barierą.\n",
     "\n",
-    "W tym wypadku nie obserwujemy linii prostych jak poprzednio. Wysokość maksymalna w obszarach 1 i 3 jest mniejsza niż w symulacji testowej o około 7%, natomiast w obszarze 2 jest prawie 22% większa - jest to spowodowane \"wybrzuszeniem\" fali na barierze, co bardzo dobrze widać na wykresie (b) na wysokości różowej linii przerywanej. Fala \"czując\" pod sobą przeszkodę, zwiększa swoją wysokość.\n",
+    "W tym wypadku nie obserwujemy linii prostych jak poprzednio. Wysokość maksymalna w obszarach 1 i 3 jest mniejsza niż w symulacji testowej o około 8%, natomiast w obszarze 2 jest prawie 22% większa - jest to spowodowane \"wybrzuszeniem\" fali na barierze, co bardzo dobrze widać na wykresie (b) na wysokości różowej linii przerywanej. Fala \"czując\" pod sobą przeszkodę, zwiększa swoją wysokość.\n",
     "\n",
     "Widzimy również, że przed barierą maksymalna prędkość fali nie różni się znacząco od testowej, podczas interakcji z przeszkodą jest ok. 8% mniejsza, a po jej pokonaniu fala spowalnia o aż 14%."
    ]
@@ -498,8 +536,8 @@
     "cfg_single_step.get_data_params(ts, data, data_label)\n",
     "selected = cfg_single_step.get_selected_data(data, data_label)\n",
     "print(selected)\n",
-    "print(f\"\\nComparison ({data_label}/test):\")\n",
-    "print(cfg_single_step.get_compared_data(data, data_label).round(5))\n",
+    "print(f\"\\nComparison ({data_label}/test-1 [%]):\")\n",
+    "print((cfg_single_step.get_compared_data(data, data_label).round(5) * 100))\n",
     "show_plot(f\"{data_label}_result\")"
    ]
   },
@@ -516,7 +554,7 @@
    "id": "e5d1c336",
    "metadata": {},
    "source": [
-    "### Parameters"
+    "### Parametry"
    ]
   },
   {
@@ -548,7 +586,7 @@
    "id": "255cfa4a",
    "metadata": {},
    "source": [
-    "### Initial"
+    "### Stan początkowy"
    ]
   },
   {
@@ -569,7 +607,7 @@
    "id": "f8d29e6c",
    "metadata": {},
    "source": [
-    "### Simulation"
+    "### Symulacja"
    ]
   },
   {
@@ -587,7 +625,7 @@
    "id": "af28e196",
    "metadata": {},
    "source": [
-    "### Results"
+    "### Wyniki"
    ]
   },
   {
@@ -595,9 +633,9 @@
    "id": "2f46484e",
    "metadata": {},
    "source": [
-    "Również i w tym przypadku - największa wysokość fali jest podczas spotkania z zaporą, w szczególności jest to zauważalne na rysunku (b), na którym widać dwa małe wybrzuszenia tuż przez wejściem fali na przeszkodę. Maksymalna wysokość fali przed falochronem jest ok. 12% mniejsza niż testowa, natomiast po przejściu przez niego, spada do 81% wartości początkowej.\n",
+    "Również i w tym przypadku - największa wysokość fali jest podczas spotkania z zaporą, w szczególności jest to zauważalne na rysunku (b), na którym widać dwa małe wybrzuszenia tuż przez wejściem fali na przeszkodę. Maksymalna wysokość fali przed falochronem jest ok. 12% mniejsza niż testowa, natomiast po przejściu przez niego, spada o 19%.\n",
     "\n",
-    "Rozkład prędkości również wygląda podobnie, jak poprzednio, tylko że widoczny jest większy efekt. Fala, po przejściu przez falochron traci ok. 25% swojej prędkości."
+    "Rozkład prędkości również wygląda podobnie, jak poprzednio, tylko że widoczny jest większy efekt. Fala, po przejściu przez falochron traci ok. 24% swojej prędkości."
    ]
   },
   {
@@ -626,8 +664,8 @@
     "cfg_double_step.get_data_params(ts, data, data_label)\n",
     "selected = cfg_double_step.get_selected_data(data, data_label)\n",
     "print(selected)\n",
-    "print(f\"\\nComparison ({data_label}/test):\")\n",
-    "print(cfg_double_step.get_compared_data(data,data_label).round(5))\n",
+    "print(f\"\\nComparison ({data_label}/test-1 [%]):\")\n",
+    "print(cfg_double_step.get_compared_data(data,data_label).round(5)*100)\n",
     "show_plot(f\"{data_label}_result\")\n"
    ]
   },
@@ -652,7 +690,7 @@
    "id": "670029d4",
    "metadata": {},
    "source": [
-    "### Parameters"
+    "### Parametry"
    ]
   },
   {
@@ -682,7 +720,7 @@
    "id": "d9b47c98",
    "metadata": {},
    "source": [
-    "### Simulation"
+    "### Symulacja"
    ]
   },
   {
@@ -700,7 +738,7 @@
    "id": "c4cefdfd",
    "metadata": {},
    "source": [
-    "### Results"
+    "### Wyniki"
    ]
   },
   {
@@ -710,7 +748,7 @@
    "source": [
     "Początkowa dokładność czasowa wynosiła `(0.2, 0.05)` i zmieniamy ją na `(0.4, 0.05)`. W związku z tym, należy również dwukrotnie zmniejszyć liczbę kroków czasowych, aby zachować taki sam kształt przebiegu.\n",
     "\n",
-    "Parametry fali zmieniły się nieznacznie. Procentowe wartości względem fali testowej różnią się od poprzedniej dokładności czasowej o ok. 1%, jednakże porównując dane z falą z podwójną przeszkodą wartości zmieniły się o ułamki procenta."
+    "Parametry fali zmieniły się nieznacznie. Procentowe wartości względem fali testowej różnią się od poprzedniej dokładności czasowej o mniej niż 1%, jednakże porównując dane z falą z podwójną przeszkodą wartości zmieniły się o ułamki procenta."
    ]
   },
   {
@@ -720,22 +758,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = cfg_double_step_t.plots.plot_bath_times()\n",
     "ts = [int(mul * n) for n in [50, 80, 160, 220]]\n",
-    "xs = cfg_double_step_t.bath_x_peaks\n",
-    "for name, ax in axes.items():\n",
-    "    if name != \"bathymetry\":\n",
-    "        cfg_double_step_t.plots.axvline_t(ax, ts, **kwargs[\"t\"])\n",
-    "        for i, x_mid in enumerate(xs):\n",
-    "            ax.axhline(\n",
-    "                x_mid, label=r\"$\\mathrm{barrier}$\" if i == 0 else \"\", **kwargs[\"x\"]\n",
-    "            )\n",
-    "    else:\n",
-    "        for i, x_mid in enumerate(xs):\n",
-    "            ax.axvline(\n",
-    "                x_mid, label=r\"$\\mathrm{barrier}$\" if i == 0 else \"\", **kwargs[\"x\"]\n",
-    "            )\n",
-    "    ax.legend(fontsize=12)\n",
     "cfg_double_step_t.get_data_params(ts, data, data_label)\n",
     "selected = cfg_double_step_t.get_selected_data(data, data_label)\n",
     "print(f\"Grid: {cfg_double_step.grid} -> {cfg_double_step_t.grid}\")\n",
@@ -743,11 +766,10 @@
     "print(f\"Time steps: {cfg_double_step.nt} -> {cfg_double_step_t.nt}\")\n",
     "print()\n",
     "print(selected)\n",
-    "print(f\"\\nComparison ({data_label}/test):\")\n",
-    "print(cfg_double_step_t.get_compared_data(data, data_label).round(5))\n",
-    "print(f\"\\nComparison ({data_label}/two_step):\")\n",
-    "print(cfg_double_step_t.get_compared_data(data, data_label, \"two_step\").round(5))\n",
-    "show_plot(f\"{data_label}_result\")"
+    "print(f\"\\nComparison ({data_label}/test-1 [%]):\")\n",
+    "print(cfg_double_step_t.get_compared_data(data, data_label).round(5) * 100)\n",
+    "print(f\"\\nComparison ({data_label}/two_step-1 [%]):\")\n",
+    "print(cfg_double_step_t.get_compared_data(data, data_label, \"two_step\").round(5) * 100)"
    ]
   },
   {
@@ -771,7 +793,7 @@
    "id": "ce94f3c6",
    "metadata": {},
    "source": [
-    "### Parameters"
+    "### Parametry"
    ]
   },
   {
@@ -801,7 +823,7 @@
    "id": "0a92c381",
    "metadata": {},
    "source": [
-    "### Simulation"
+    "### Symulacja"
    ]
   },
   {
@@ -819,7 +841,7 @@
    "id": "316dda81",
    "metadata": {},
    "source": [
-    "### Results"
+    "### Wyniki"
    ]
   },
   {
@@ -839,22 +861,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = cfg_double_step_x.plots.plot_bath_times()\n",
     "ts = [int(n * mul) for n in [50, 80, 160, 220]]\n",
-    "xs = cfg_double_step_x.bath_x_peaks\n",
-    "for name, ax in axes.items():\n",
-    "    if name != \"bathymetry\":\n",
-    "        cfg_double_step_x.plots.axvline_t(ax, ts, **kwargs[\"t\"])\n",
-    "        for i, x_mid in enumerate(xs):\n",
-    "            ax.axhline(\n",
-    "                x_mid, label=r\"$\\mathrm{barrier}$\" if i == 0 else \"\", **kwargs[\"x\"]\n",
-    "            )\n",
-    "    else:\n",
-    "        for i, x_mid in enumerate(xs):\n",
-    "            ax.axvline(\n",
-    "                x_mid, label=r\"$\\mathrm{barrier}$\" if i == 0 else \"\", **kwargs[\"x\"]\n",
-    "            )\n",
-    "    ax.legend(fontsize=12)\n",
     "cfg_double_step_x.get_data_params(ts, data, data_label)\n",
     "selected = cfg_double_step_x.get_selected_data(data, data_label)\n",
     "print(f\"Grid: {cfg_double_step.grid} -> {cfg_double_step_x.grid}\")\n",
@@ -862,11 +869,10 @@
     "print(f\"Time steps: {cfg_double_step.nt} -> {cfg_double_step_x.nt}\")\n",
     "print()\n",
     "print(selected)\n",
-    "print(f\"\\nComparison ({data_label}/test):\")\n",
-    "print(cfg_double_step_x.get_compared_data(data, data_label).round(5))\n",
-    "print(f\"\\nComparison ({data_label}/two_step):\")\n",
-    "print(cfg_double_step_x.get_compared_data(data, data_label, \"two_step\").round(5))\n",
-    "show_plot(f\"{data_label}_result\")"
+    "print(f\"\\nComparison ({data_label}/test-1 [%]):\")\n",
+    "print(cfg_double_step_x.get_compared_data(data, data_label).round(5)*100)\n",
+    "print(f\"\\nComparison ({data_label}/two_step-1 [%]):\")\n",
+    "print(cfg_double_step_x.get_compared_data(data, data_label, \"two_step\").round(5)*100)"
    ]
   },
   {
