--- a/labs/project/main.ipynb
+++ b/labs/project/main.ipynb
@@ -189,9 +189,22 @@
     "| test_0     |  0.0153713 | 0.0459974 | -0.0459974 |\n",
     "| one_step_0 |  0.0141852 | 0.0459974 | -0.0459974 |\n",
     "| one_step_1 |  0.0187256 | 0.0421697 | -0.0421697 |\n",
-    "| one_step_2 |  0.0145508 | 0.0394076 | -0.0394076 |\n",
-    "\n",
-    "Comparison (one_step/test-1 [%]):\n",
+    "| one_step_2 |  0.0145508 | 0.0394076 | -0.0394076 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f6c9bbe",
+   "metadata": {},
+   "source": [
+    "Comparison (one_step/test-1 [%]):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20ee50ff",
+   "metadata": {},
+   "source": [
     "|            |   zeta_max |   mag_max |   ux_min |\n",
     "|:-----------|-----------:|----------:|---------:|\n",
     "| one_step_0 |     -7.716 |    -0     |   -0     |\n",
